# autonomy

./: .cursorrules  .gitignore  README.md  build-all.sh  capability.sh  launch.sh  main.py  pyproject.toml  workflow.sh
core/: config.py
mcp-server/: Dockerfile  README.md  pyproject.toml
mcp-server-browse/: Dockerfile  README.md  main.py  pyproject.toml
mcp-server-development/: Dockerfile  README.md  main.py  pyproject.toml
mcp-server-formatter/: README.md  main.py  pyproject.toml
mcp-server-jira/: README.md  main.py  pyproject.toml
mcp-server-math/: .dockerignore  Dockerfile  README.md  main.py
mcp-server-workflow/: Dockerfile  README.md  main.py  pyproject.toml  workflow.py
scripts/: hook-pre-commit.sh  hook-setup.sh  screenshot.js
src/: browse_main.py  jira_main.py  main.py  workflow_main.py
src/core/: config.py
src/tool/: browse.py  formatter.py  jira.py  workflow.py
tests/: test_browse.py  test_config.py  test_formatter.py  test_jira.py  test_main.py  test_workflow.py
tool/: browse.py  formatter.py  jira.py  math.py  workflow.py
